Fixed align of button text

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -37,7 +37,7 @@ a#new-plan-button {
   text-decoration: none;
   border-radius: 4px;
   background: #4D5259;
-  padding: 5px 8px 8px;
+  padding: 5px 8px;
   margin: 11px 10px 0 0;
   border: 1px solid #3c4248; }
 
