--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -8,9 +8,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   vertical-align: baseline;
   background: transparent; }
 
-body {
-  line-height: 1; }
-
 ol, ul {
   list-style: none; }
 
